--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@
 
 html {
     scroll-behavior: smooth;
+
+    height: 100%;
 }
 
 body {
@@ -34,6 +36,10 @@ body {
     color: var(--text-primary);
     background: var(--bg-secondary);
     line-height: 1.6;
+
+    height: 100%;
+    scroll-behavior: smooth;
+
 }
 
 a {
@@ -84,10 +90,16 @@ a {
 /* Layout */
 .main {
     padding-top: 5rem;
+
+    scroll-snap-type: y mandatory;
+    /* 세로 스냅 */
 }
 
 .section {
     padding: var(--spacing-lg) 0;
+
+    scroll-snap-align: start;
+    /* 각 섹션 시작 지점에서 멈춤 */
 }
 
 .section--white {
@@ -132,7 +144,7 @@ a {
     background: var(--primary-color);
     color: var(--bg-primary);
     border-radius: var(--border-radius);
-    margin-top: var(--spacing-sm);
+    /* margin-top: var(--spacing-sm); */
     transition: var(--transition);
 }
 
@@ -175,17 +187,17 @@ a {
     align-items: center;
     justify-content: space-between;
     gap: var(--spacing-md);
-    min-height: 60vh;
+    min-height: 50vh;
 }
 
 .hero__content {
     flex: 1;
-    max-width: 500px;
+    max-width: 700px;
     animation: slideIn 1s ease-out;
 }
 
 .hero__title {
-    font-size: 2.5rem;
+    font-size: 3.7rem;
     margin-bottom: var(--spacing-sm);
 }
 
@@ -417,13 +429,14 @@ a {
     display: flex;
     align-items: center;
     gap: 0.8rem;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     font-weight: 500;
 }
 
 .contact__item i {
     color: var(--text-muted);
 }
+
 
 .copy-btn {
     width: 20px;
@@ -498,7 +511,7 @@ a {
 
     .hero {
         flex-direction: column-reverse;
-        text-align: center;
+        text-align: start;
         gap: var(--spacing-md);
     }
 
@@ -527,8 +540,15 @@ a {
 
     .experience-card__logo {
         align-self: flex-start;
-        flex: 0 0 120px;
-        height: 100px;
+        /* flex: 0 0 120px;
+        height: 100px; */
+
+        flex: 0 0 auto;
+        /* 고정 크기 제거 */
+        width: auto;
+        height: auto;
+        order: l;
+        margin-bottom: -1.2rem;
     }
 
     .experience-card__logo img {
@@ -537,6 +557,15 @@ a {
         height: 100%;
         max-height: 100px;
         object-fit: contain;
+    }
+
+    .experience-card__content {
+        order: 3;
+    }
+
+    .experience-card__date {
+        order: 2;
+        margin-bottom: -1rem;
     }
 
     .project-card__content,
